<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.main.user_management.account.AccountFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="28sp"
                android:textFontWeight="500"
                android:fontFamily="sans-serif-black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/OutlinedButton"
                android:layout_alignParentRight="true"
                android:text="@string/edit"/>
        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/generic_fullname"
            style="@style/CustomTextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                style="@style/CustomTextInputEditText"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/generic_email"
            style="@style/CustomTextInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                style="@style/CustomTextInputEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</FrameLayout>