<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.main.user_management.UserManagementFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="62dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="40sp"
        android:textFontWeight="500"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@id/guideline4" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout_user_management"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mtv_settings"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        android:layout_marginTop="20dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_user_management"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tablayout_user_management"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/guideline3"/>

</androidx.constraintlayout.widget.ConstraintLayout>